<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">sbautologin</string>
    <string name="title">Starbucks WiFi Auto Login</string>
    <string name="history">Recent history:</string>
    <string name="nohist">No recent connection attemps.</string>
    <string name="clear_history">Clear History</string>
    <string name="settings">Settings</string>
    <string name="notify_prefs_title">Notify me when:</string>
    <string name="notify_prefs_success">Successfully logged in</string>
    <string name="notify_prefs_error">Error occurred</string>
    <string name="notify_prefs_already_logged">Already logged in</string>
    <string name="save">Save</string>
    <string name="conf_save">Configuration saved</string>
    <string name="notify_title">sbautologin</string>
    <string name="notify_message_success">Successfully logged in</string>
    <string name="notify_message_error">Login failed</string>
    <string name="notify_message_already_logged">Already logged in</string>
    <string name="urllabel">URL to check</string>
    <string name="defaulturl">http://www.codeminders.com/</string>
</resources>
