<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:orientation="vertical">
    <TextView android:text="@string/notify_prefs_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:textSize="20sp"/>
    <CheckBox android:id="@+id/prefs_checkbox_success"
              android:text="@string/notify_prefs_success"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:textSize="20sp"/>
    <CheckBox android:id="@+id/prefs_checkbox_error"
              android:text="@string/notify_prefs_error"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:textSize="20sp"/>
    <CheckBox android:id="@+id/prefs_checkbox_already_logged"
              android:text="@string/notify_prefs_already_logged"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:textSize="20sp"/>
    <Button android:id="@+id/prefs_save"
            android:text="@string/save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>